--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,12 +1,19 @@
-<h3>user partial</h3>
-
-<%= form_for @user do |f| %>
+<%= form_for :user do |f| %>
   
-  <%= f.text_field :name %>
-  <%= f.number_field :height %>
-  <%= f.number_field :happiness %>
-  <%= f.number_field :nausea %>
-  <%= f.number_field :tickets %>
+  <%= f.label :name %>
+  <%= f.text_field :name %><br>
+  
+  <%= f.label :height %>
+  <%= f.number_field :height %><br>
+  
+  <%= f.label :happiness%>
+  <%= f.number_field :happiness %><br>
+  
+  <%= f.label :nausea %>
+  <%= f.number_field :nausea %><br>
+  
+  <%= f.label :ticket %>
+  <%= f.number_field :tickets %><br>
 
   <%= f.submit  %>
 <% end %>
