User Signout specs passing

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
   <%= f.label "How happy are you? (1-5 scale)" %><br>
   <%= f.number_field :happiness %><br>
   
-  <%= f.label "How nauseaous are you? (1-5 scale)" %><br>
+  <%= f.label "How nauseous are you? (1-5 scale)" %><br>
   <%= f.number_field :nausea %><br>
   
   <%= f.label "How many dollars are in your pocket?" %><br>
