--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
 <% if @current_user %>
   <%= link_to "Hello, #{@current_user.name}", user_path(@current_user) %>
   <%= link_to "Attractions", attractions_path %>
-  <%= link_to "Log Out", signout_path %>
+  <%= link_to "Log Out", signout_path, :method=>:delete %>
 <% else %>
   <%= link_to "Sign Up", new_user_path %>
   <%= link_to "Sign In", signin_path %>
