--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -12,3 +12,5 @@
 
 <%= button_to "Go on this ride", ride_path(@attraction) %><br>  
 <%= link_to "Back", attractions_path %>
+
+<%= link_to "Edit Attraction", edit_attraction_path(@attraction) if @user.admin %>
