--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,5 +15,8 @@
   <%= f.label :ticket %>
   <%= f.number_field :tickets %><br>
 
+  <%= f.label :admin %>
+  <%= f.check_box :admin %><br>
+
   <%= f.submit  %>
 <% end %>
