--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,6 @@
 
 <p><strong>Height: </strong><%= @user.height%> inches</p>
 
-<p>Edit</p>
+<p><%= link_to "Edit", edit_user_path %></p>
 
 <p><%=link_to "See attractions", attractions_path %></p>
